# DrivePal

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARK-VehicleMemBench.md  BENCHMARK.md  DEV.md  EXPERIMENT.md  README.md  REQUIREMENT.md  flake.nix  main.py  pyproject.toml  pytest.ini  ruff.toml  run_benchmark.py  run_exp.py  run_experiment.py  skills-lock.json  ty.toml  中期检查答辩稿.md  中期检查表.md  开题报告.md
.agents/: AGENTS.md
.github/workflows/: no-suppressions.yml  python.yml
.opencode/commands/: check-thesis.md
adapters/: __init__.py  model_config.py  runner.py
adapters/memory_adapters/: __init__.py  common.py  embeddings_adapter.py  gold_adapter.py  keyword_adapter.py  kv_adapter.py  llm_only_adapter.py  memory_bank_adapter.py  none_adapter.py  summary_adapter.py
app/: AGENTS.md  __init__.py  config.py  exceptions.py  utils.py
app/agents/: AGENTS.md  __init__.py  context_agent.py  conversation.py  execution_agent.py  joint_decision_agent.py  llm_utils.py  outputs.py  pending.py  probabilistic.py  prompts.py  prompts_proactive.py  rules.py  shortcuts.py  state.py  types.py  workflow.py
app/api/: AGENTS.md  __init__.py  errors.py  graphql_schema.py  main.py  middleware.py  scheduler_registry.py  schemas.py  stream.py
app/experiment/: __init__.py  runner.py  test_data.py
app/voice/: asr.py  (+12 more)
archive/: AGENTS.md  test.docx  中期检查表.md  中期检查表参考2.md  初稿-20260430.md  初稿-20260511.md  初稿意见-20260430.md  初稿意见-20260511.md  定稿-20260511.md  开题报告.md
config/: AGENTS.md  driver_states.json  evaluation_config.json  llm.json  llm.toml  rules.toml  scenarios.json  scheduler.toml  shortcuts.toml  tools.toml  voice.toml
docs/: demo-script.md
experiments/: AGENTS.md  __init__.py
scripts/: gen_figs.py  md2docx.py  voice-server.sh
tests/: AGENTS.md  __init__.py  _helpers.py  conftest.py  fixtures.py  test_ablation_optimization.py  test_api.py  test_background_worker.py  test_chat.py  test_chat_model.py  test_components.py  test_context_converter.py  test_context_schemas.py  test_conversation.py  test_cosine_similarity.py  test_e2e_pipeline.py  test_embedding.py  test_embedding_client.py  test_evaluate.py  test_execute.py  test_experiment.py  test_experiment_runner.py  test_faiss_index_encapsulation.py  test_forgetting.py  test_graphql.py  test_index_recovery.py  test_jsonl_store.py  test_judge.py  test_llm_json_client.py  test_llm_json_validation.py  test_memory.py  test_memory_bank.py  test_memory_bank_reset.py  test_memory_module_facade.py  test_memory_store_contract.py  test_memory_types.py  test_multi_user.py  test_outputs.py  test_pending.py  test_prepare.py  (+12 more)
vendor_adapter/: __init__.py
webui/: AGENTS.md  app.js  index.html  styles.css
(+451 files in other folders)
