[project]
name = "thesis-cockpit-memo"
version = "0.1.0"
description = "车载AI智能体原型系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "openai>=1.82.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "sentence-transformers>=5.3.0",
    "tomli-w>=1.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

