[project]
name = "thesis-cockpit-memo"
version = "0.1.0"
description = "车载AI智能体原型系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "tomli-w>=1.2.0",
    "strawberry-graphql[fastapi]>=0.312.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config", "vendor_adapter"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

