[project]
name = "thesis-cockpit-memo"
version = "0.1.0"
description = "车载AI智能体原型系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "webrtcvad>=2.0.10",
    "aiofiles>=25.1.0",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "tomli-w>=1.2.0",
    "faiss-cpu>=1.10.0",
    "rank-bm25>=0.2.2",
    "setuptools<70",
    "sherpa-onnx>=1.13.2",
    "onnxruntime==1.24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    "python-docx>=1.2.0",
    "httpx>=0.28.0",
    "latex2mathml>=3.81.0",
    "mathml2omml-as>=0.1.0",
    "markdown-it-py>=4.0.0",
    "scipy>=1.17.1",
    "matplotlib>=3.10.9",
]

